<resources>
    <string name="app_name">Simple sign-up</string>
    <string name="password_txt_hnt">New password</string>
    <string name="confrm_password_txt_hnt">Confirm password</string>
    <string name="email_txt_hint">Email address</string>
    <string name="first_name_txt_hint">First name</string>
    <string name="last_name_txt_hint">Last name</string>
    <string name="mobile_nmbr_txt_hint">Mobile number</string>
    <string name="sign_up_btn_txt">Sign up</string>
</resources>